# InfixLang

./: .gitignore  CMakeLists.txt  README.md  ResolutionAlgorithm.md  TODO.md  resolution.tests.infix
src/: evaluate.cc  function_parse.cc  infix.h  infix_parse.cc  lookup_util.cc  main.cc  operator_defn.cc  parser.cc  resolve_types.cc
src/passes/: function_parse.cc  infix_parse.cc  lookup_util.cc  node_worker.h  operator_defn.cc  parse_types.cc  pass.cc  resolve_types.cc
testsuite/: CMakeLists.txt  basic.cmake
testsuite/casestudies/: expressionproblem.infix  lists.infix
testsuite/casestudies/expressionproblem/: 00_parse.trieste  01_structure.trieste  02_function_parse.trieste  03_infix_parse.trieste  03_parse_types.trieste  03_resolve_types.trieste  04_infix_parse.trieste  expressionproblem_final.trieste  stdout.txt
testsuite/parsing/: assign.infix  binding1.infix  binding2.infix  binding2_1.infix  binding3.infix  binding4.infix  binding5.infix  binding6.infix  binding7.infix  binding8.infix  binding_cycle1.infix  binding_generic1.infix  binding_generic2.infix  binding_generic3.infix  binding_generic4.infix  binding_generic5.infix  binding_generic6.infix  binding_generic7.infix  binding_generic8.infix  comment.infix  comment2.infix  else1.infix  else2.infix  if1.infix  if2.infix  ifelse1.infix  infix1.infix  module.infix  option1.infix  option2.infix  patternmatch.infix  struct1.infix  struct2.infix  typealias1.infix  where.infix  while1.infix
vscode-extensions/: README.md  build-extensions.sh  install-extension.sh  package.json
vscode-extensions/infix/: README.md  language-configuration.json  package.json
vscode-extensions/trieste/: README.md  language-configuration.json  package.json
(+179 files in other folders)
